# playing-with-animation

./: CMakeLists.txt
src/: configuration.hpp  events.cpp  main.cpp
